# nanogaia

./: .gitignore  AGENTS.md  README.md  docker-compose.yaml  pyproject.toml
nanogaia/: comma2k19_dataset.py  encoder_test.py  frame_reader.py  latend_dataset.py  latent_dataset.py  main.py  model.py  prepare_dataset.py  train.py  train.yaml  util.py
tests/: test_comma_dataset.py  test_comma_dataset_pose.py  test_util.py
