[project]
name = "nanogaia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "av>=15.1.0",
    "black>=25.11.0",
    # "datasets>=4.3.0",
    "diffusers>=0.35.2",
    "ffmpeg>=1.4",
    "opencv-python>=4.12.0.88",
    "transformers>=4.57.1",
    "torch==2.6.0+cu124; sys_platform == 'linux'",
    "torch==2.6.0; sys_platform == 'darwin'",
    "torchvision==0.21.0+cu124; sys_platform == 'linux'",
    "torchvision==0.21.0; sys_platform == 'darwin'",
    "flash-attn",
]

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project.optional-dependencies]
test = [
  "pytest>=8.3.4",
  "lark>=1.3.1",
]

[tool.uv]
find-links = [
    "https://download.pytorch.org/whl/cu124/torch",
    "https://download.pytorch.org/whl/cu124/torchvision",
]
