[project]
name = "nanogaia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.11.0",
    # "datasets>=4.3.0",
    "diffusers>=0.35.2",
    "ffmpeg>=1.4",
    "opencv-python>=4.12.0.88",
    "imageio>=2.35.0",
    "transformers>=4.57.1",
    "torch==2.6.0+cu124; sys_platform == 'linux'",
    "torch==2.6.0; sys_platform == 'darwin'",
    "torchvision==0.21.0+cu124; sys_platform == 'linux'",
    "torchvision==0.21.0; sys_platform == 'darwin'",
    "flash-attn==v2.7.4.post1; sys_platform == 'linux'",
    "wandb>=0.23.0",
    "weave>=0.52.17",
    "lmdb>=1.7.5",
    "tqdm>=4.67.1",
    "dataclasses>=0.8",
]

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project.optional-dependencies]
test = [
  "pytest>=8.3.4",
  "lark>=1.3.1",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

torchvision = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[tool.uv.extra-build-dependencies]
flash-attn = [{ requirement = "torch", match-runtime = true }]

[tool.uv.extra-build-variables]
flash-attn = { FLASH_ATTENTION_SKIP_CUDA_BUILD = "TRUE" }
